# zero-to-prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: run_db.sh
src/: app.rs  configuration.rs  lib.rs  main.rs  router.rs  validation.rs
src/routes/: health.rs  subscriptions.rs
src/tests/: all.rs  util.rs
src/tests/routes/: health.rs  subscriptions.rs
src/tests/util/: test_app.rs
tests/: health.rs  subscriptions.rs
