[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zero2prod"

[[test]]
name = "all"
path = "src/tests/all.rs"

[dependencies]
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio-rustls", # Tokio for futures, rustls for TLS
    "macros",               # For sqlx::query! and sqlx::query_as! macros
    "postgres",             # Postgres specific functionality
    "uuid",                 # UUID support
    "chrono",               # Support for mapping SQL UUIDs to Uuid from Chrono crate
    "migrate",              # Support for database migrations (needed for tests)
] }

axum = { version = "0.6.20", features = [
    "headers",
    "macros",
    "matched-path",
    "tracing",
] }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator = { version = "0.15", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.30"
config = "0.13.3"
tower-http = { version = "0.4.4", features = ["trace"] }
